# ia-open-science

./: .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  README.md  codemeta.json  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  installation.md  limitations.md  usage.md  validation.md
scripts/: extract_links.py  figures_chart.py  keyword_cloud.py  papers.py  process_grobid.py
tests/: test_pipeline.py
