[project]
name = "practica"
version = "0.1.0"
description = ""
authors = [
    {name = "kinib0m-dev",email = "kinib0m.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "morph-kgc (>=2.10.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "practica", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
