[tool.poetry]
name = "ia-open-science"
version = "0.1.0"
description = "Text extraction and analysis of AI/ML research papers using Grobid"
authors = ["Diego Garcia Rebate <diego.grebate@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^5.1.0"
wordcloud = "^1.9.3"
matplotlib = "^3.8.0"
pandas = "^2.2.0"
grobid-client-python = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"